# cb

./: Cargo.toml  README.md
.github/workflows/: main.yml
doc/: cb.1
src/: main.rs
tests/: test.rs
