[package]
name = "cb"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"
license-file = "LICENSE"
description = "clipboard manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1.0.3"
